Various minor CC fixes